k8tutorial/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-depl
  labels:
    app: mongo-express
spec:
    replicas: 1
    selector:
        matchLabels:
          app: mongo-express
    template:
        metadata:
          labels:
              app: mongo-express
        spec:
          containers:
            - name: mongo-express
              image: mongo-express
              ports:
              - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-clusterip-srv
spec:
    selector:
        app: mongo-express
    type: LoadBalancer #allows external access
    ports:
    - name: mongo-express
      protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000 #range is 30000 to 32000
