k8tutorial/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-depl
  labels:
    app: mongodb
spec:
    replicas: 1
    selector:
        matchLabels:
          app: mongodb
    template:
        metadata:
          labels:
              app: mongodb
        spec:
          containers:
            - name: mongodb
              image: mongo
              ports:
              - containerPort: 27017 #these two have to match for ports
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-clusterip-srv
spec:
    type: ClusterIP
    selector:
        app: mongodb
    ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017 #these two have to match for ports
