k8tutorial/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls: #this is for https
    - hosts:
        - dashboard.com
      secretName: dashboard-secret
  rules:
    - host: dashboard.com
      http:
        paths:
          - backend:
                serviceName: kubernetes-dashboard
                servicePort: 80
                path: /(.*)
